# job-app-tracking

./: .pre-commit-config.yaml  Makefile  README.md  manage.py  mkdocs.yml  pyproject.toml
candidacies/: admin.py  apps.py  models.py
candidacies/migrations/: 0001_initial.py
docs/: README.fr.md
jobapptacking/: asgi.py  settings.py  urls.py  wsgi.py
jobs/: admin.py  models.py
jobs/migrations/: 0001_initial.py  0002_job_created_job_description.py  0003_jobsource_finale_company.py  0004_alter_jobsource_link.py
